# open-images-v7-100

./: .gitignore  CITATION.cff  README.md  install.sh  open-images-v7-100.json  open-images-v7-30.json  open-images-v7-50.json  pyproject.toml
datasets/: open-images-v7-10.json  open-images-v7-70.json
open_images_v7_100/: .env.example  args.py  dataset.py  main.py  utils.py
tests/: test_open_images_v7.py
